--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -20,6 +20,12 @@
     flex-direction: column;
     gap: 12px;
 }
+footer p{
+    color: #808080;
+    margin-top: 24px ;
+    margin-left: 80px ;
+}
+
 @media (max-width:770px) {
     .contact{
         margin-top: 20px;
@@ -43,9 +49,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 0;
+        padding: 0;
     }
     .contact--header{
         width: 100%;
+        margin: 0;
+        padding: 0;
     }
     .contact--form{
         width: 100%;
@@ -56,17 +66,19 @@
     .contact footer{
         width: 100%;
         display: flex;
-        flex-direction: row;
-        margin: 0 6px 12px;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 12px;
     }
     .contact footer p{
-        font-size: 12px;
+        font-size: 10px;
         white-space: nowrap;
         display: flex;
         padding: 0px;
         margin: 0px;
-        position: relative;
-        left: -150px;
+    }
+    .contact--buttons{
+        border-radius: 10px;
     }
   }
   
