--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -46,18 +46,31 @@
         align-items: center;
         padding: 0px;
         margin: 0px;
-        position: relative;
-        left: 0px;
+        margin-top: 24px;
+        gap: 2px;
+        font-size: 14px;
+    }
+    .form input{
+        min-height: 32px;
+        width: 100%;
+        border-radius: 10px;
+        font-size: 14px;
+    }
+    .form textarea{
+        width: 100%;
+        border-radius: 10px;
     }
     .form button{
-        height: 40px;
+        width: 100%;
+        height: 32px;
         background-color: var(--accent-color);
         letter-spacing: 2px;
         font-weight: 500;
-        font-size: 15px;
-        color: var(--primary-color);
-        border-radius: 12px;
+        font-size: 14px;
+        border-radius: 10px;
         margin-top: 20px;
-        padding: 4px 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
