--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -58,6 +58,19 @@
 
 
 @media (max-width: 690px){
+    .home{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+    }
+    .home--3dframe{
+        width: 100%;
+        margin: 0;
+        overflow: visible;
+    }
     .home--text{
         z-index: 10;
         display: flex;
