--- a/src/components/ThreeModel/ThreeModel.css
+++ b/src/components/ThreeModel/ThreeModel.css
@@ -4,14 +4,23 @@
 }
 @media (max-width: 1405px){
     .spline--container{
+        margin: 0;
         z-index: -10;
         width: 100%;
         height: 100vh;
         display: block;
         position: absolute;
         top: 40%;
-        left: 40%;
+        left: 50%;
         transform: translate(-50%, -50%);
-        scale: 0.9;
+        scale: 1;
+    }
+}
+@media (max-width: 690px){
+    .spline--container{
+
+    }
+    .spline{
+
     }
 }
