--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -95,6 +95,8 @@
     .about--skills-container{
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
     .display-on-mobile{
         display: none;
