--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,6 +6,8 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     margin: 30px 24px 0px;
 }
 .about--text{
