--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,12 @@
 
 .header{
     display: flex;
-    justify-content: flex-start;
-    background-color: rgba(0, 0, 0, 0);
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
     z-index: 1;
+    width: 100%;
+    margin: 0;
 }
 
 .header--nav{
@@ -20,9 +23,60 @@
     transition: color 0.3s;
     text-align: center;
 }
+.header--logo{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header--logo img{
+    height: 50px;
+    cursor: pointer;
+    z-index: 10;
+}
+.header--download-btn button{
+    cursor: pointer;
+    background: transparent;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 3px;
+    padding: 7px 16px;
+    font-size: 16px;
+    font-weight: 500;
+    width: 100%;
+    transition: 0.5s;
+  }
+  .header--download-btn button:hover{
+    background: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    scale: 0.95;
+  }
 
-@media (max-width: 690px){
-    .header{
+@media (max-width: 750px){
+    .header--nav{
         display: none;
+    }
+    .header{
+        flex-direction: column;
+    }
+    .header--download-btn{
+        margin-top: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .header--logo{
+        margin-top: 12px;
+    }
+}
+
+@media (max-width: 1000px){
+    .header{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .header--download-btn{
+        margin-top: 12px;
     }
 }
