--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,10 +5,12 @@
 .about--details{
     width: 100%;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 30px 24px 0px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .about--text{
     width: 50%;
@@ -31,7 +33,7 @@
 .about--skills{
     width: 50%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
 }
@@ -61,7 +63,7 @@
         color: var(--primary-color);
     }
   }
-  @media (max-width: 695px){
+  @media (max-width: 750px){
 
     #about{
         background-image: none;
@@ -73,18 +75,19 @@
         width: 100%;
     }
      .about--details{
+        width: 100%;
         flex-direction: column;
         margin: 0;
         padding: 0;
     }
     .about--text{
         width: 100%;
-        padding-top: 42px;
+        padding-top: 24px;
         text-align: center;
     }
     .about--text p{
         font-size: 16px;
-        width:100%;
+        width:80%;
     }
     .about--skills{
         margin-top: 80px;
