--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,13 +1,16 @@
 
-.home--3dframe{
-    height: 70vh;
-    padding-top: 40px;
+.home{
+  width: 100%; 
 }
 .home--text{
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: absolute;
+    width: 100%;
+    top: 90vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .home--text-slogan{
     display: flex;
@@ -32,9 +35,6 @@
 
 /* responsive */
 @media (max-width: 1406px) {
-    .home{
-        width: 100%;
-    }
     .home--text-posation{
         width: 100%;
         font-size: 24px;
@@ -47,15 +47,8 @@
 }
 
 
+
 @media (max-width: 690px){
-    .home{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-    }
     .home--3dframe{
         width: 100%;
         margin: 0;
@@ -67,6 +60,7 @@
         justify-content: center;
         align-items: center;
         gap: 12px;
+        background-color: var(--bg-color);
     }
     .home--text-slogan{
         display: flex;
@@ -83,7 +77,7 @@
         padding: 6px;
         font-size: 16px;
         letter-spacing: 10px;
-        background-color: var(--bg-color);
+        
         padding: 16px;
 
     }
