--- a/src/components/ThreeModel/ThreeModel.css
+++ b/src/components/ThreeModel/ThreeModel.css
@@ -2,25 +2,16 @@
     display: flex;
     justify-content: center;
 }
-@media (max-width: 1405px){
-    .spline--container{
-        margin: 0;
-        z-index: -10;
-        width: 100%;
-        height: 100vh;
-        display: block;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        scale: 1;
-    }
-}
-@media (max-width: 690px){
-    .spline--container{
-
-    }
-    .spline{
-
-    }
+.spline--container{
+    display: none;
+    margin: 0;
+    z-index: -100;
+    width: 100%;
+    height: 70vh;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    scale: 1;
 }
